<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TreeOlive">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/olive_background">

        <ImageButton
            android:id="@+id/back_button_olive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="16dp"
            android:src="@drawable/ic_a_back" />

        <ImageButton
            android:id="@+id/shopping_button_olive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="16dp"
            android:src="@drawable/ic_a_bag" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/Olive"
                android:textColor="#909090"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/Olive_text1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/condition_title"
                android:textColor="#909090"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/condition_content_olive" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/Maintenance_title"
                android:textColor="#909090"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/maintenance_content_olive" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/height"
                android:textColor="#909090"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/height_olive" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/Growth_rate_title"
                android:textColor="#909090"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/Moderate" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:src="@drawable/star" />

            <TextView
                android:id="@+id/age_textview_olive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="Age: 1 year" />

            <SeekBar
                android:id="@+id/age_seakbar_olice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="10"
                android:min="1" />

            <TextView
                android:id="@+id/height_textview_olive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="Height: 2m" />

            <SeekBar
                android:id="@+id/height_seakbar_olice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="20"
                android:min="2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill_horizontal"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Amount:"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/amount_olive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:inputType="numberSigned" />

                <Button
                    android:id="@+id/add_cart_olive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:onClick="clickAdd"
                    android:text="Add To Cart" />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</LinearLayout>