<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/a_background"
    tools:content=".TreePage">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <ImageButton
            android:id="@+id/back_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_a_back"/>
        <TextView
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_title"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:textSize="24sp"/>
        <ImageButton
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:id="@+id/shopping_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_a_bag"/>

    </RelativeLayout>
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:rowCount="5"
        android:columnCount="2">

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="300dp"
            android:background="@drawable/ic_square_white"
            android:layout_margin="16dp"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/button_olive"
                android:layout_margin="8dp"
                android:layout_width="134dp"
                android:layout_height="134dp"
                android:background="@drawable/a_olive_copy"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Olive"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="20sp" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_margin="8dp"
                android:src="@drawable/star"
                />
            <TextView
                android:layout_margin="4dp"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:textSize="16sp"
                android:text="@string/Size_L_Olive"/>
            <TextView
                android:layout_margin="4dp"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:textSize="16sp"
                android:text="@string/Size_S_Olive"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="300dp"
            android:background="@drawable/ic_square_white"
            android:layout_margin="16dp"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/button_kauri"
                android:layout_margin="8dp"
                android:layout_width="134dp"
                android:layout_height="134dp"
                android:background="@drawable/a_kauri"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kauri"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="20sp" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_margin="8dp"
                android:src="@drawable/star"
                />
            <TextView
                android:layout_margin="4dp"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:textSize="16sp"
                android:text="@string/Size_L_Kuari"/>
            <TextView
                android:layout_margin="4dp"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:textSize="16sp"
                android:text="@string/Size_S_Kuari"/>
        </LinearLayout>
    </GridLayout>


</LinearLayout>